--- a/package.json
+++ b/package.json
@@ -23,17 +23,19 @@
     "lint": "eslint ."
   },
   "peerDependencies": {
-    "@apollo/server": "^4.3.0",
-    "@google-cloud/functions-framework": "^3.1.3"
+    "@apollo/server": "^4.11.0",
+    "graphql": "^16.11.0",
+    "@google-cloud/functions-framework": "4.0.0"
   },
   "devDependencies": {
-    "@apollo/server": "4.11.2",
+    "@apollo/server": "4.12.2",
     "@apollo/server-integration-testsuite": "4.11.2",
     "@apollo/utils.withrequired": "3.0.0",
-    "@google-cloud/functions-framework": "3.4.2",
+    "@google-cloud/functions-framework": "4.0.0",
     "@types/jest": "29.5.14",
     "@types/node": "16.18.119",
     "jest": "29.7.0",
+    "graphql": "^16.11.0",
     "jest-junit": "16.0.0",
     "prettier": "3.3.3",
     "ts-jest": "29.2.5",
